--- a/index.html
+++ b/index.html
@@ -12,54 +12,56 @@
       <a class="header__logo" href="#"></a>
     </header>
 
-    <main class="content">
-      <section class="profile">
-        <img class="profile__avatar" src="" alt="аватар"/>
+    <main class="content ">
+      <section class="profile1 content__profile">
+        <img class="profile__avatar" src="./images/avatar.jpg" alt="аватар" />
         <div class="profile__info">
-          <h1 class="profile__name">Жак-Ив Кусто</h1>
+          <h1 class="profile__name">Жак-Ив Кусто
+            <button class="profile__edit-button"></button>
+          </h1>
           <p class="profile__job">Исследователь океана</p>
-          <button class="profile__add-button"></button>
         </div>
+        <button class="profile__add-button"></button>
       </section>
 
       <section class="elements">
         <div class="element">
-          <img class="element__image" src="" alt="">
+          <img class="element__image" src="" alt="" />
           <div class="element__info">
             <h2 class="element__name">Карачаевск</h2>
             <button class="element__like"></button>
           </div>
         </div>
         <div class="element">
-          <img class="element__image" src="" alt="">
+          <img class="element__image" src="" alt="" />
           <div class="element__info">
             <h2 class="element__name">Гора Эльбрус</h2>
             <button class="element__like"></button>
           </div>
         </div>
         <div class="element">
-          <img class="element__image" src="" alt="">
+          <img class="element__image" src="" alt="" />
           <div class="element__info">
             <h2 class="element__name">Домбай</h2>
             <button class="element__like"></button>
           </div>
         </div>
         <div class="element">
-          <img class="element__image" src="" alt="">
+          <img class="element__image" src="" alt="" />
           <div class="element__info">
             <h2 class="element__name">Гора Эльбрус</h2>
             <button class="element__like"></button>
           </div>
         </div>
         <div class="element">
-          <img class="element__image" src="" alt="">
+          <img class="element__image" src="" alt="" />
           <div class="element__info">
             <h2 class="element__name">Домбай</h2>
             <button class="element__like"></button>
           </div>
         </div>
         <div class="element">
-          <img class="element__image" src="" alt="">
+          <img class="element__image" src="" alt="" />
           <div class="element__info">
             <h2 class="element__name">Карачаево-Черкесия</h2>
             <button class="element__like"></button>
@@ -70,8 +72,8 @@
       <div class="popup">
         <div class="popup__container">
           <h2 class="popup__title">Редактировать профиль</h2>
-          <input class="popup__name" type="text">
-          <input class="popup__job" type="text">
+          <input class="popup__name" type="text" />
+          <input class="popup__job" type="text" />
           <button class="popup__submit">Сохранить</button>
         </div>
       </div>
