add elements, popup, footer, adaptive

--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
       <a class="header__logo" href="#"></a>
     </header>
 
-    <main class="content ">
+    <main class="content">
       <section class="profile1 content__profile">
         <img class="profile__avatar" src="./images/avatar.jpg" alt="аватар" />
         <div class="profile__info">
-          <h1 class="profile__name">Жак-Ив Кусто
+          <h1 class="profile__name">
+            Жак-Ив Кусто
             <button class="profile__edit-button"></button>
           </h1>
           <p class="profile__job">Исследователь океана</p>
@@ -26,42 +27,42 @@
 
       <section class="elements">
         <div class="element">
-          <img class="element__image" src="" alt="" />
+          <img class="element__image" src="./images/karach.jpg" alt="Карачаевск" />
           <div class="element__info">
             <h2 class="element__name">Карачаевск</h2>
             <button class="element__like"></button>
           </div>
         </div>
         <div class="element">
-          <img class="element__image" src="" alt="" />
+          <img class="element__image" src="./images/elbrus.jpg" alt="Гора Эльбрус" />
           <div class="element__info">
             <h2 class="element__name">Гора Эльбрус</h2>
             <button class="element__like"></button>
           </div>
         </div>
         <div class="element">
-          <img class="element__image" src="" alt="" />
+          <img class="element__image" src="./images/dombay.jpg" alt="Домбай" />
           <div class="element__info">
             <h2 class="element__name">Домбай</h2>
             <button class="element__like"></button>
           </div>
         </div>
         <div class="element">
-          <img class="element__image" src="" alt="" />
+          <img class="element__image" src="./images/elbrus.jpg" alt="Гора Эльбрус" />
           <div class="element__info">
             <h2 class="element__name">Гора Эльбрус</h2>
             <button class="element__like"></button>
           </div>
         </div>
         <div class="element">
-          <img class="element__image" src="" alt="" />
+          <img class="element__image" src="./images/dombay.jpg" alt="Домбай" />
           <div class="element__info">
             <h2 class="element__name">Домбай</h2>
             <button class="element__like"></button>
           </div>
         </div>
         <div class="element">
-          <img class="element__image" src="" alt="" />
+          <img class="element__image" src="./images/karach.jpg" alt="Карачаево-Черкесия" />
           <div class="element__info">
             <h2 class="element__name">Карачаево-Черкесия</h2>
             <button class="element__like"></button>
@@ -72,9 +73,10 @@
       <div class="popup">
         <div class="popup__container">
           <h2 class="popup__title">Редактировать профиль</h2>
-          <input class="popup__name" type="text" />
-          <input class="popup__job" type="text" />
+          <input class="popup__name" type="text" placeholder="Жак-Ив Кусто" />
+          <input class="popup__job" type="text" placeholder="Исследователь океана" />
           <button class="popup__submit">Сохранить</button>
+          <button class="popup__close-icon"></button>
         </div>
       </div>
     </main>
