add profile buttonedit

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <input class="popup__name" type="text" maxlength="30" />
         <input class="popup__job" type="text" maxlength="100" />
         <button class="popup__submit" type="submit" >Сохранить</button>
-        <button class="popup__close-icon"></button>
+        <button class="popup__close-icon" type="button"></button>
       </form>
     </div>
 
