--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Место</title>
-    <link rel="stylesheet" href="./pages/index.css" />
+    <link rel="stylesheet" href="./pages/index.css"/>
   </head>
   <body class="root">
     <header class="header">
@@ -13,7 +13,7 @@
     </header>
 
     <main class="content">
-      <section class="profile1 content__profile">
+      <section class="profile content__profile">
         <img class="profile__avatar" src="./images/avatar.jpg" alt="аватар" />
         <div class="profile__info">
           <div class="profile__name-wrap">
