--- a/index.html
+++ b/index.html
@@ -20,11 +20,7 @@
         <div class="profile__info">
           <div class="profile__name-wrap">
             <h1 class="profile__name">Жак-Ив Кусто</h1>
-            <button
-              class="profile__edit-button"
-              type="button"
-              aria-label="Редактировать профиль"
-            ></button>
+            <button class="profile__edit-button" type="button" aria-label="Редактировать профиль"></button>
           </div>
           <p class="profile__job">Исследователь океана</p>
         </div>
@@ -85,14 +81,14 @@
       <div class="popup__container">
         <form class="popup__form" name="popupForm">
           <h2 class="popup__title">Редактировать профиль</h2>
-          <input class="popup__input popup__input_name" name="name" type="text" maxlength="30" />
-          <input class="popup__input popup__input_job" name="job" type="text" maxlength="100" />
+          <input class="popup__input popup__input_field_name" name="name" type="text" maxlength="30" />
+          <input class="popup__input popup__input_field_job" name="job" type="text" maxlength="100" />
           <button class="popup__submit" type="submit" aria-label="Сохранить">Сохранить</button>
         </form>
         <button class="popup__close-icon" type="button" aria-label="закрыть"></button>
       </div>
     </div>
 
-    <script src="./blocks/script/index.js"></script>
+    <script src="./scripts/index.js"></script>
   </body>
 </html>
