add popap places, img, js add/del card, like

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
     <div class="popup popup_image">
       <div class="popup_image__container">
-        <img class="popup_image__pic"/>
+        <img class="popup_image__pic" src="#"  alt="#"/>
         <h2 class="popup_image__title"></h2>
         <button class="popup__close-icon" type="button" aria-label="закрыть"></button>
       </div>
@@ -100,7 +100,7 @@
 
     <template id="element-template">
       <article class="element">
-        <img class="element__image" />
+        <img class="element__image" src="#" alt="#"/>
         <button class="element__trash-icon" type="button" aria-label="удалить"></button>
         <div class="element__info">
           <h2 class="element__name"></h2>
