--- a/index.html
+++ b/index.html
@@ -39,18 +39,18 @@
     </footer>
 
     <!-- Popaps -->
-    <div class="popup popup_name">
+    <div class="popup popup-name">
       <div class="popup__container">
         <form class="popup__form" name="popupForm">
           <h2 class="popup__title">Редактировать профиль</h2>
           <input
-            class="popup__input popup_name__input_field_name"
+            class="popup__input popup-name__input-name"
             name="name"
             type="text"
             maxlength="30"
           />
           <input
-            class="popup__input popup_name__input_field_job"
+            class="popup__input popup-name__input-job"
             name="job"
             type="text"
             maxlength="100"
@@ -63,12 +63,12 @@
       </div>
     </div>
 
-    <div class="popup popup_place">
+    <div class="popup popup-place">
       <div class="popup__container">
         <form class="popup__form" name="popupForm">
           <h2 class="popup__title">Новое место</h2>
           <input
-            class="popup__input popup_place__input_field_place"
+            class="popup__input popup-place__input-place"
             placeholder="Название"
             name="place"
             type="text"
@@ -76,7 +76,7 @@
             required
           />
           <input
-            class="popup__input popup_place__input_field_link"
+            class="popup__input popup-place__input-link"
             placeholder="Ссылка на картинку"
             name="link"
             type="text"
@@ -90,10 +90,10 @@
       </div>
     </div>
 
-    <div class="popup popup_image">
-      <div class="popup_image__container">
-        <img class="popup_image__pic" src="#"  alt="#"/>
-        <h2 class="popup_image__title"></h2>
+    <div class="popup popup-image">
+      <div class="popup-image__container">
+        <img class="popup-image__pic" src="#"  alt="#"/>
+        <h2 class="popup-image__title"></h2>
         <button class="popup__close-icon" type="button" aria-label="закрыть"></button>
       </div>
     </div>
