--- a/index.html
+++ b/index.html
@@ -123,5 +123,6 @@
 
     <script type="module" src="./scripts/index.js"></script>
     <script type="module" src="./scripts/initialCards.js"></script>
+    <script type="module" src="./scripts/validate.js></script>
   </body>
 </html>
