--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
     </footer>
 
     <!-- Popups -->
-    <div class="popup popup_name">
+    <div class="popup popup-name">
       <div class="popup__container">
         <form class="popup__form" name="popupForm" novalidate>
           <h2 class="popup__title">Редактировать профиль</h2>
 
           <input
-            class="popup__input popup_name__input_field_name"
+            class="popup__input popup-name__input-name"
             name="name-input"
             type="text"
             minlength="2"
@@ -54,7 +54,7 @@
           />
           <span class="popup__error" id="name-input-error"></span>
           <input
-            class="popup__input popup_name__input_field_job"
+            class="popup__input popup-name__input-job"
             name="job-input"
             type="text"
             minlength="2"
@@ -71,29 +71,33 @@
       </div>
     </div>
 
-    <div class="popup popup_place">
+    <div class="popup popup-place">
       <div class="popup__container">
         <form class="popup__form" name="popupForm" novalidate>
           <h2 class="popup__title">Новое место</h2>
-          <input
-            class="popup__input popup_place__input_field_place"
-            name="place-input"
-            id="dww"
-            placeholder="Название"
-            type="text"
-            minlength="2"
-            maxlength="30"
-            required
-          />
-          <span class="popup__error" id="place-input-error"></span>
-          <input
-            class="popup__input popup_place__input_field_link"
-            name="link-input"
-            placeholder="Ссылка на картинку"
-            type="url"
-            required
-          />
-          <span class="popup__error" id="link-input-error"></span>
+          <label class="popup__form-field">
+            <input
+              class="popup__input popup-place__input-place"
+              name="place-input"
+              placeholder="Название"
+              type="text"
+              minlength="2"
+              maxlength="30"
+              required
+            />
+            <span class="popup__error" id="place-input-error"></span>
+          </label>
+          <label class="popup__form-field">
+            <input
+              class="popup__input popup-place__input-link"
+              name="link-input"
+              placeholder="Ссылка на картинку"
+              type="url"
+              required
+            />
+            <span class="popup__error" id="link-input-error"></span>
+          </label>
+
           <button class="popup__submit popup__submit_place" type="submit" aria-label="Сохранить">
             Создать
           </button>
@@ -102,10 +106,10 @@
       </div>
     </div>
 
-    <div class="popup popup_image">
-      <div class="popup_image__container">
-        <img class="popup_image__pic" src="#" alt="#" />
-        <h2 class="popup_image__title"></h2>
+    <div class="popup popup-image">
+      <div class="popup-image__container">
+        <img class="popup-image__pic" src="#" alt="#" />
+        <h2 class="popup-image__title"></h2>
         <button class="popup__close-icon" type="button" aria-label="закрыть"></button>
       </div>
     </div>
@@ -123,6 +127,6 @@
 
     <script type="module" src="./scripts/index.js"></script>
     <script type="module" src="./scripts/initialCards.js"></script>
-    <script type="module" src="./scripts/validate.js></script>
+    <script type="module" src="./scripts/validate.js"></script>
   </body>
 </html>
