add css validation form

--- a/index.html
+++ b/index.html
@@ -38,15 +38,15 @@
       <p class="footer__text">© 2022 Mesto Russia</p>
     </footer>
 
-    <!-- Popaps -->
-    <div class="popup popup_name">
+    <!-- Popups -->
+    <div class="popup popup-name">
       <div class="popup__container">
         <form class="popup__form" name="popupForm" novalidate>
           <h2 class="popup__title">Редактировать профиль</h2>
 
           <input
-            class="popup__input popup_name__input_field_name"
-            name="name"
+            class="popup__input popup-name__input-name"
+            name="name-input"
             type="text"
             minlength="2"
             maxlength="40"
@@ -54,8 +54,8 @@
           />
           <span class="popup__error" id="name-input-error"></span>
           <input
-            class="popup__input popup_name__input_field_job"
-            name="job"
+            class="popup__input popup-name__input-job"
+            name="job-input"
             type="text"
             minlength="2"
             maxlength="200"
@@ -75,21 +75,29 @@
       <div class="popup__container">
         <form class="popup__form" name="popupForm" novalidate>
           <h2 class="popup__title">Новое место</h2>
-          <input
-            class="popup__input popup_place__input_field_place"
-            placeholder="Название"
-            name="place"
-            type="text"
-            maxlength="30"
-            required
-          />
-          <input
-            class="popup__input popup_place__input_field_link"
-            placeholder="Ссылка на картинку"
-            name="link"
-            type="text"
-            required
-          />
+          <label class="popup__form-field">
+            <input
+              class="popup__input popup-place__input-place"
+              name="place-input"
+              placeholder="Название"
+              type="text"
+              minlength="2"
+              maxlength="30"
+              required
+            />
+            <span class="popup__error" id="place-input-error"></span>
+          </label>
+          <label class="popup__form-field">
+            <input
+              class="popup__input popup-place__input-link"
+              name="link-input"
+              placeholder="Ссылка на картинку"
+              type="url"
+              required
+            />
+            <span class="popup__error" id="link-input-error"></span>
+          </label>
+
           <button class="popup__submit popup__submit_place" type="submit" aria-label="Сохранить">
             Создать
           </button>
@@ -98,10 +106,10 @@
       </div>
     </div>
 
-    <div class="popup popup_image">
-      <div class="popup_image__container">
-        <img class="popup_image__pic" src="#"  alt="#"/>
-        <h2 class="popup_image__title"></h2>
+    <div class="popup popup-image">
+      <div class="popup-image__container">
+        <img class="popup-image__pic" src="#" alt="#" />
+        <h2 class="popup-image__title"></h2>
         <button class="popup__close-icon" type="button" aria-label="закрыть"></button>
       </div>
     </div>
