js part of FormValidator class

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
       </article>
     </template>
 
-    <script type="module" src="./scripts/index.js"></script>
-    <script type="module" src="./scripts/validate.js"></script>
+    <script type="module" src="./scripts/index.js" defer></script>
+    <script type="module" src="./scripts/validate.js" defer></script>
   </body>
 </html>
