--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -5,18 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Место</title>
-    <link rel="stylesheet" href="./pages/index.css" />
   </head>
   <body class="root">
     <header class="header">
       <a class="header__logo" href="#">
-        <img class="header__logo-img" src="./images/header__logo.svg" alt="логотип" />
+        <img class="header__logo-img" src="<%=require('../images/header__logo.svg')%>" alt="логотип" />
       </a>
     </header>
 
     <main class="content">
       <section class="profile content__profile">
-        <img class="profile__avatar" src="./images/avatar.jpg" alt="аватар" />
+        <img class="profile__avatar" src="<%=require('../images/avatar.jpg')%>" alt="аватар" />
         <div class="profile__info">
           <div class="profile__name-wrap">
             <h1 class="profile__name">Жак-Ив Кусто</h1>
@@ -127,6 +126,5 @@
       </article>
     </template>
 
-    <script type="module" src="./scripts/index.js" defer></script>
   </body>
 </html>
