--- a/src/index.html
+++ b/src/index.html
@@ -10,31 +10,37 @@
   <body class="root">
     <header class="header">
       <a class="header__logo" href="#">
-        <img class="header__logo-img" src="<%=require('../images/header__logo.svg')%>" alt="логотип" />
+        <img class="header__logo-img" src="<%=require('./images/header__logo.svg')%>" alt="логотип" />
       </a>
     </header>
 
     <main class="content">
       <section class="profile content__profile">
-        <img class="profile__avatar" src="<%=require('../images/avatar.jpg')%>" alt="аватар" />
-        <div class="profile__info">
-          <div class="profile__name-wrap">
-            <h1 class="profile__name">Жак-Ив Кусто</h1>
-            <button
-              class="profile__edit-button"
-              type="button"
-              aria-label="Редактировать профиль"
-            ></button>
+
+        <div class="profile__wrap">
+          <img class="profile__avatar" src="<%=require('./images/avatar.jpg')%>" alt="аватар" />
+          <div class="profile__info">
+            <div class="profile__name-wrap">
+              <h1 class="profile__name">Жак-Ив Кусто</h1>
+              <button
+                class="profile__edit-button"
+                type="button"
+                aria-label="Редактировать профиль"
+              ></button>
+            </div>
+            <p class="profile__job">Исследователь океана</p>
           </div>
-          <p class="profile__job">Исследователь океана</p>
+
         </div>
+
+
         <button class="profile__add-button" type="button" aria-label="Добавить карточку"></button>
       </section>
       <section class="elements"></section>
     </main>
 
     <footer class="footer">
-      <p class="footer__text">© 2022 Mesto Russia</p>
+      <p class="footer__text">© 2023 Mesto Russia</p>
     </footer>
 
     <!-- Popups -->
