--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
     <!-- Popups -->
     <div class="popup popup-name">
       <div class="popup__container">
-        <form class="popup__form" name="popupForm" novalidate>
+        <form class="popup__form" name="popup-name" novalidate>
           <h2 class="popup__title">Редактировать профиль</h2>
 
           <input
@@ -75,7 +75,7 @@
 
     <div class="popup popup-place">
       <div class="popup__container">
-        <form class="popup__form" name="popupForm" novalidate>
+        <form class="popup__form" name="popup-place" novalidate>
           <h2 class="popup__title">Новое место</h2>
           <label class="popup__form-field">
             <input
@@ -111,7 +111,7 @@
 
     <div class="popup popup-avatar">
       <div class="popup__container">
-        <form class="popup__form" name="popupForm" novalidate>
+        <form class="popup__form" name="popup-avatar" novalidate>
           <h2 class="popup__title">Обновить аватар</h2>
 
           <input
