--- a/src/index.html
+++ b/src/index.html
@@ -132,9 +132,9 @@
     </div>
 
     <div class="popup popup-withSubmit">
-      <div class="popup__container">
+      <div class="popup__container popup__container-withSubmit">
         <form class="popup__form" name="popupForm" novalidate>
-          <h2 class="popup__title">Вы уверены?</h2>
+          <h2 class="popup__title popup__title-withSubmit">Вы уверены?</h2>
           <button class="popup__submit popup-withSubmit" type="submit" aria-label="Да">
             Да
           </button>
